feat: Integrate Lombok, enhance `ComplexityService` for robust code parsing and accurate line counting, and perform minor test refactoring.